Memory leak in Method::build_profiling_method_data

XMLWordPrintable

    • b28

        LSan has hinted at a memory leak in MethodData related to _extra_data_lock. It looks like MethodData::deallocate_contents is being called before ~MethodData from Method::release_C_heap_structures(), leading to the memory used by _extra_data_lock not being released.

        I confirmed this by switching _extra_data_lock to be a pointer and adding a guarantee to MethodData::deallocate_contents that asserts it should be NULL. It crashes at the guarantee. I'll see if I can get the call trace.

              Assignee:
              Coleen Phillimore
              Reporter:
              Justin King
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: