8298084: Memory leak in Method::build_profiling_method_data